applications/vaultwarden/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vaultwarden-gateway
  namespace: vaultwarden-app
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-prd
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: password.decort.tech
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      hostname: password.decort.tech
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: vaultwarden-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-route-redirect
  namespace: vaultwarden-app
spec:
  parentRefs:
    - name: vaultwarden-gateway
      namespace: vaultwarden-app
      sectionName: http
  hostnames:
    - "password.decort.tech"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-route
  namespace: vaultwarden-app
spec:
  parentRefs:
    - name: vaultwarden-gateway
      namespace: vaultwarden-app
      sectionName: https
  hostnames:
    - "password.decort.tech"
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
